--- a/index.html
+++ b/index.html
@@ -211,28 +211,28 @@ layout: default
 
 
 <!-- ========== RESUME ========== -->
-<div class="docs-section" id="resume">
+<!-- <div class="docs-section" id="resume">
   <h4>Vitæ</h4> -->
 
-  <p>Full CV in <a href={{ "/assets/cv/CV.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+  <!-- <p>Full CV in <a href={{ "/assets/cv/CV.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
   <!-- The Timeline -->
-  <ul class="timeline">
-    {% for exp in site.data.experience.experiences %}
-    <li>
-      {% if exp.category == "work" %}
-      <div class="direction-l">
-      {% else %}
-      <div class="direction-r">
-      {% endif %}
-        <div class="flag-wrapper">
-          <span class="flag">{{ exp.place }}</span>
-          <span class="time-wrapper"><span class="time">{{ exp.time }}</span></span>
-        </div>
-        <div class="desc"><b>{{ exp.title }}</b> <br/> {{ exp.subtitle }}</div>
-      </div>
-    </li>
-    {% endfor %}
-  </ul>
-</div>
+  <!-- <ul class="timeline"> -->
+    <!-- {% for exp in site.data.experience.experiences %} -->
+    <!-- <li> -->
+      <!-- {% if exp.category == "work" %} -->
+      <!-- <div class="direction-l"> -->
+      <!-- {% else %} -->
+      <!-- <div class="direction-r"> -->
+      <!-- {% endif %} -->
+        <!-- <div class="flag-wrapper"> -->
+          <!-- <span class="flag">{{ exp.place }}</span> -->
+          <!-- <span class="time-wrapper"><span class="time">{{ exp.time }}</span></span> -->
+        <!-- </div> -->
+        <!-- <div class="desc"><b>{{ exp.title }}</b> <br/> {{ exp.subtitle }}</div> -->
+      <!-- </div> -->
+    <!-- </li> -->
+    <!-- {% endfor %} -->
+  <!-- </ul> -->
+<!-- </div> -->
 
-</div>
+</div> -->
