--- a/index.html
+++ b/index.html
@@ -130,12 +130,11 @@ layout: default
   <h4>Education</h4>
         <div class="paper">
           <p class="title"><b>Korea Advanced Institute of Science and Technology (KAIST)</b></p>
-          <p> Ph.D. in Artificial Intelligence<b style="float:right;">Sep. 2023 - Present</b></p>
-          <p> M.S. in Artificial Intelligence<b style="float:right;">Mar. 2022 - Aug. 2023</b></p>
+          <p> M.S. in Artificial Intelligence<b style="float:right;">Sep. 2024 - Present</b></p>
         </div>
         <div class="paper">
           <p class="title"><b>Seoul National University (SNU)</b></p>
-          <p>B.S. in Industrial Engineering and Mathematical Sciences (minor)<b style="float:right;">Mar. 2016 - Feb. 2022</b></p>
+          <p>B.S. in Industrial Engineering and Mathematical Sciences <b style="float:right;">Mar. 2019 - Feb. 2024</b></p>
         </div>
 </div>
 
@@ -158,7 +157,7 @@ layout: default
 
 
 <!-- ========== Honors and Awards ========== -->
-<div class="docs-section" id="honors">
+<!-- <div class="docs-section" id="honors">
   <h4>Honors and Awards</h4>
         <div class="paper">
           <p> <b>Reviewer Award</b>, International Conference on Learning Representations (ICLR) <b style="float:right;">Mar. 2025</b></p>
@@ -169,19 +168,19 @@ layout: default
           <p> <b>Special Prize</b>, National Cryptograpy Contest <b style="float:right;">Oct. 2021</b></p>
           <p> <b>Recipient</b>, Hanseong Scholarship for Gifted Students <b style="float:right;">2014 - 2016</b></p>
         </div>
-</div>
+</div> -->
 
 <!-- ========== Academic Services ========== -->
-<div class="docs-section" id="services">
+<!-- <div class="docs-section" id="services">
   <h4>Academic Services</h4>
         <div class="paper">
           <p> <b>Conference Reviewer</b> NeurIPS, ICLR, AISTATS, COLM, ICCV, ICML</p>
           <p> <b>Workshop Reviewer</b> TRL@NeurIPS</p>
         </div>
-</div>
+</div> -->
 
 <!-- ========== Invited Talks ========== -->
-<div class="docs-section" id="invited">
+<!-- <div class="docs-section" id="invited">
   <h4>Invited Talks</h4>
           <div class="paper">
           <p class="title"><b>Rethinking Tabular Learning in the Era of LLMs</b></p>
@@ -207,7 +206,7 @@ layout: default
           <p>Korean Mathematical Society Fall Meeting (Virtual)<b style="float:right;">Oct. 2021</b></p>
           <p>Special Prize, National Cryptography Contest, 2021</p>
         </div>
-</div>
+</div> -->
 
 
 <!-- ========== RESUME ========== -->
@@ -235,4 +234,4 @@ layout: default
   <!-- </ul> -->
 <!-- </div> -->
 
-</div> -->
+</div>
