--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="docs-section" id="about">
   <h4>About</h4>
     <p>
-      I am a Master Student at KAIST, advised by <a href="https://chulheeyun.github.io">Chulhee Yun</a>.
+      I am a Master Student at KAIST, advised by <a href="https://chulheeyun.github.io">Prof. Chulhee Yun</a>.
       Previously, I completed my B.S. in Industrial Engineering and Mathematical Sciences at Seoul National University.
       My research interests are centered on ~.
       My recent work specifically focuses on ~.
@@ -142,16 +142,16 @@ layout: default
 <div class="docs-section" id="experience">
   <h4>Experience</h4>
         <div class="paper">
-          <p class="title"><b>Google Cloud AI Research<b style="float:right;">Mar. 2025 - Present</b></b></p>
-          <p> Student Researcher, hosted by <a href="https://sites.google.com/corp/view/jinsungyoon">Jinsung Yoon</a> </p>
+          <p class="title"><b>Optimization & Machine Learning Laboratory, KAIST AI<b style="float:right;">Oct. 2023 - Aug. 2024</b></b></p>
+          <p> Research Intern, hosted by <a href="https://chulheeyun.github.io">Prof. Chulhee Yun</a> </p>
         </div>
         <div class="paper">
-          <p class="title"><b>SK Hynix<b style="float:right;">Dec. 2020 - Feb. 2021</b></b></p>
-          <p> Intern, AI Solution </p>
+          <p class="title"><b>GERAD, Polytechnique Montreal<b style="float:right;">Feb. 2022 - Jul. 2022</b></b></p>
+          <p> Research Intern, advised by <a href="https://www.polymtl.ca/expertises/en/sanso-brunilde">Prof. Brunilde Sansò</a> </p>
         </div>
         <div class="paper">
-          <p class="title"><b>Military Service<b style="float:right;">Mar. 2018 - Feb. 2020</b></b></p>
-          <p> Republic of Korea Air Force </p>
+          <p class="title"><b>Big Data AI Center, Seoul National University<b style="float:right;">Jun. 2021 - Aug. 2021</b></b></p>
+          <p> Research Intern, advised by <a href="http://dm.snu.ac.kr/ko/people/professor">Prof. Sungzoon Cho</a> </p>
         </div>
 </div>
 
