Make icon buttons fully circular

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: default
     <p>
       I am a Master Student at KAIST, advised by <a href="https://chulheeyun.github.io">Prof. Chulhee Yun</a>.
       Previously, I completed my B.S. in Industrial Engineering and Mathematical Sciences at Seoul National University.
-      My research interests are centered on ~.
-      My recent work specifically focuses on ~.
+      My research interests are centered on deep learning theory and optimization.
+      <!-- My recent work specifically focuses on ~. -->
     </p>
     <!-- <p style="margin-bottom: 5px;"><b>Topics of interest</b> (publications with overlap):</p> -->
     <!-- <ul>
@@ -143,7 +143,7 @@ layout: default
   <h4>Experience</h4>
         <div class="paper">
           <p class="title"><b>Optimization & Machine Learning Laboratory, KAIST AI<b style="float:right;">Oct. 2023 - Aug. 2024</b></b></p>
-          <p> Research Intern, hosted by <a href="https://chulheeyun.github.io">Prof. Chulhee Yun</a> </p>
+          <p> Research Intern, advised by <a href="https://chulheeyun.github.io">Prof. Chulhee Yun</a> </p>
         </div>
         <div class="paper">
           <p class="title"><b>GERAD, Polytechnique Montreal<b style="float:right;">Feb. 2022 - Jul. 2022</b></b></p>
