--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="docs-section" id="about">
   <h4>About</h4>
     <p>
-      I am a Master student at <a href="https://gsai.kaist.ac.kr">KAIST AI</a>, advised by <a href="https://chulheeyun.github.io">Prof. Chulhee Yun</a>.
+      I am a Master's student at <a href="https://gsai.kaist.ac.kr">KAIST AI</a>, advised by <a href="https://chulheeyun.github.io">Prof. Chulhee Yun</a>.
       Previously, I completed my B.S. in Industrial Engineering and Mathematical Sciences at Seoul National University.
       My research interests are centered on deep learning theory and optimization, with a focus on bridging the gap between theory and practice.
       <!-- My recent work specifically focuses on ~. -->
